a1/brendan_gordon/TEST_PROGRAMS/invalidtype/remi_bernard/ass.min
# assignemnt with incorrect type
var x: int;
x = x + 2.0;

